[ClearMine] 添加是否在红旗过多时显示警告的配置项
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@154 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -111,7 +111,10 @@
                           IsChecked="{Binding SaveOnExit}"
                           Margin="0,0,0,5" />
                 <CheckBox Content="{DynamicResource AlwaysContinueGameLabel}"
-                          IsChecked="{Binding AutoContinueSaved}" />
+                          IsChecked="{Binding AutoContinueSaved}"
+                          Margin="0,0,0,5" />
+                <CheckBox Content="{DynamicResource ShowTooManyFlagsWarning}"
+                          IsChecked="{Binding ShowTooManyFlagsWarning}" />
             </StackPanel>
         </GroupBox>
         <GroupBox Header="{DynamicResource GameHistoryGroupLabel}"
