[ClearMine] 为主窗口添加样式
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@160 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/generic.xaml
+++ b/ClearMine.Themes/Themes/generic.xaml
@@ -487,4 +487,11 @@
         <Setter Property="ItemContainerStyle"
                 Value="{StaticResource {x:Static GridView.GridViewItemContainerStyleKey}}" />
     </Style>
+    <Style TargetType="{x:Type Window}">
+        <Setter Property="Background" Value="Silver" />
+        <Setter Property="UseLayoutRounding" Value="True" />
+        <Setter Property="TextOptions.TextFormattingMode" Value="Display" />
+        <Setter Property="Content" Value="{Binding}" />
+        <Setter Property="Title" Value="{DynamicResource ApplicationTitle}" />
+    </Style>
 </ResourceDictionary>
