[ClearMine] 添加Linux Ubuntu风格
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@161 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -159,4 +159,5 @@
     <s:String x:Key="RequiresTwoValues">values must contains at least two element.</s:String>
     <s:String x:Key="ExpressionMustBeMember">parameter expression can only be member access expression.</s:String>
     <s:String x:Key="PerformanceIssueMoving">Item moving in cached collection. This is harmful to performance.</s:String>
+    <s:String x:Key="CompareSingleNumberFailed">Compare SingleNumber: {0} and {1} failed.</s:String>
 </ResourceDictionary>
