[ClearMine] 解决切换主题时，选择的菜单项被重置的问题。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@162 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/zh-CN/Overall.xaml
+++ b/ClearMine.Localization/zh-CN/Overall.xaml
@@ -160,4 +160,6 @@
     <s:String x:Key="ExpressionMustBeMember">expression参数只能是成员访问表达式。</s:String>
     <s:String x:Key="PerformanceIssueMoving">在缓存数组中移动元素会严重影响性能。</s:String>
     <s:String x:Key="CompareSingleNumberFailed">比较SingleNumber：{0}和{1}失败</s:String>
+    <s:String x:Key="AutoCheckIncompatibleMessage">AutoCheckMenuItemsBehavior 无法与设置IsCheckable为True的菜单项兼容。</s:String>
+    <s:String x:Key="AutoCheckCannotStoreSelection">AutoCheckMenuItemsBehavior 无法找到DataContext以保存当前的菜单选择项。</s:String>
 </ResourceDictionary>
