--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -160,4 +160,6 @@
     <s:String x:Key="ExpressionMustBeMember">parameter expression can only be member access expression.</s:String>
     <s:String x:Key="PerformanceIssueMoving">Item moving in cached collection. This is harmful to performance.</s:String>
     <s:String x:Key="CompareSingleNumberFailed">Compare SingleNumber: {0} and {1} failed.</s:String>
+    <s:String x:Key="AutoCheckIncompatibleMessage">AutoCheckMenuItemsBehavior may not be able to work with a checkable menu item correctly.</s:String>
+    <s:String x:Key="AutoCheckCannotStoreSelection">AutoCheckMenuItemsBehavior cannot find a datacontext to store the current selection.</s:String>
 </ResourceDictionary>
