[ClearMine] 修正一些细节
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@163 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/StatisticsWindow.xaml
+++ b/ClearMine.Dialogs/StatisticsWindow.xaml
@@ -84,9 +84,9 @@
                            BasedOn="{StaticResource {x:Static GridView.GridViewItemContainerStyleKey}}">
                         <Setter Property="ToolTip">
                             <Setter.Value>
-                                <ToolTip MaxHeight="175" MaxWidth="175">
+                                <ToolTip MaxHeight="175" MaxWidth="300">
                                     <Image Source="{Binding ScreenShootUri}"
-                                           Margin="7" Stretch="UniformToFill" />
+                                           Margin="7" Stretch="Uniform" />
                                 </ToolTip>
                             </Setter.Value>
                         </Setter>
