[ClearMine] 添加是否显示更精确的游戏时间配置项
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@165 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -87,16 +87,28 @@
         </GroupBox>
         <GroupBox Header="{DynamicResource GameEffectGroupLabel}"
                   Style="{StaticResource SeparatorGroupBoxStyle}">
-            <WrapPanel>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
                 <CheckBox Content="{DynamicResource PlaySoundLabel}"
-                          Margin="0,0,12,0"
                           IsChecked="{Binding PlaySound}" />
                 <CheckBox Content="{DynamicResource PlayAnimationLabel}"
-                          Margin="0,0,12,0"
+                          Grid.Column="1"
                           IsChecked="{Binding PlayAnimation}" />
                 <CheckBox Content="{DynamicResource WavingFlagEffect}"
+                          Grid.Row="2"
                           IsChecked="{Binding WavingFlag}" />
-            </WrapPanel>
+                <CheckBox Content="{DynamicResource ShowAccurateTime}"
+                          Grid.Row="2" Grid.Column="1"
+                          IsChecked="{Binding AccurateTime}" />
+            </Grid>
         </GroupBox>
         <GroupBox Header="{DynamicResource GameControlGroupLabel}"
                   Style="{StaticResource SeparatorGroupBoxStyle}">
