--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -15,6 +15,23 @@
                     DockPanel.Dock="Right"
                     IsCancel="True"
                     IsDefault="True" />
+            <Button DockPanel.Dock="Left"
+                    Cursor="Hand"
+                    Click="OnDonateButtonClick">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <ContentPresenter />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+                <Image Stretch="None"
+                       Source="https://www.paypal.com/zh_XC/i/btn/btn_donate_LG.gif"/>
+            </Button>
         </DockPanel>
         <DockPanel Margin="0,0,0,12">
             <Border Background="{StaticResource MineBrush}"
