[ClearMine] 多语言化捐赠图片
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@168 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -53,6 +53,7 @@
 
     <!-- About Dialog -->
     <s:String x:Key="AboutDialogTitle">About ClearMine</s:String>
+    <ImageSource x:Key="DonateImage">https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif</ImageSource>
     
     <!-- Output Dialog -->
     <s:String x:Key="OutputDialogTitle">Clear Mine - Log</s:String>
