--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -30,7 +30,7 @@
                     </Style>
                 </Button.Style>
                 <Image Stretch="None"
-                       Source="https://www.paypal.com/zh_XC/i/btn/btn_donate_LG.gif"/>
+                       Source="{DynamicResource DonateImage}"/>
             </Button>
         </DockPanel>
         <DockPanel Margin="0,0,0,12">
