[ClearMine] 捐赠图片显示前，显示超链接。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@169 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -19,11 +19,18 @@
                     Cursor="Hand"
                     Click="OnDonateButtonClick">
                 <Button.Style>
-                    <Style TargetType="{x:Type Button}">
+                    <Style TargetType="{x:Type Button}"
+                           BasedOn="{StaticResource {x:Type Button}}">
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type Button}">
-                                    <ContentPresenter />
+                                    <Grid>
+                                        <TextBlock Margin="5,2,0,2"
+                                                   VerticalAlignment="Bottom">
+                                            <Hyperlink Focusable="False"><Run Text="{DynamicResource DonateLinkText}"/></Hyperlink>
+                                        </TextBlock>
+                                        <ContentPresenter />
+                                    </Grid>
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
