--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -53,6 +53,7 @@
 
     <!-- About Dialog -->
     <s:String x:Key="AboutDialogTitle">About ClearMine</s:String>
+    <s:String x:Key="DonateLinkText">Donate</s:String>
     <ImageSource x:Key="DonateImage">https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif</ImageSource>
     
     <!-- Output Dialog -->
