--- a/ClearMine.Localization/zh-CN/Overall.xaml
+++ b/ClearMine.Localization/zh-CN/Overall.xaml
@@ -123,7 +123,7 @@
     <s:String x:Key="InvalidWidthMessage">宽度应当介于9到30之间。</s:String>
     <s:String x:Key="InvalidMinesMessage">地雷总数应当介于10到雷区大小之间</s:String>
     <s:String x:Key="HistoryNotExistMessage">游戏历史文件夹不存在。</s:String>
-    <s:String x:Key="ShowAccurateTime">显示更精确的游戏时间</s:String>
+    <s:String x:Key="ShowAccurateTime">显示更精确的游戏时间(_U)</s:String>
 
     <!-- Exception Dialog -->
     <s:String x:Key="ExceptionBoxTitle">扫雷 - 异常</s:String>
