[ClearMine] 建立起插件的配置机制
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@172 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -40,6 +40,7 @@
     <s:String x:Key="ChineseMenuItemHeader">Chi_nese</s:String>
     <s:String x:Key="CustomLanguageMenuItemHeader">_Custom...</s:String>
     <s:String x:Key="OptionsMenuItemHeader">_Options</s:String>
+    <s:String x:Key="PluginsMenuItemHeader">_Plugins</s:String>
     <s:String x:Key="HelpMenuItemHeader">_Help</s:String>
     <s:String x:Key="ViewHelpMenuItemHeader">_View Help</s:String>
     <s:String x:Key="SendFeedbakMenuItemHeader">Send _Feedback...</s:String>
