--- a/ClearMine.Dialogs/PluginsDialog.xaml
+++ b/ClearMine.Dialogs/PluginsDialog.xaml
@@ -2,10 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterOwner"
-        Title="Plugins" Height="300" Width="300">
-    <DockPanel DataContext="{Binding Plugins}">
-        <ListView ItemsSource="{Binding}"
-                  IsSynchronizedWithCurrentItem="True">
+        Title="Plugins" Height="300" Width="350">
+    <Window.Resources>
+        <Style x:Key="ItemContainerStyle"
+               TargetType="{x:Type ListViewItem}"
+               BasedOn="{StaticResource {x:Static GridView.GridViewItemContainerStyleKey}}">
+            <Setter Property="ToolTip" Value="{Binding Description}" />
+        </Style>
+    </Window.Resources>
+    <DockPanel Margin="12"
+               DataContext="{Binding Plugins}">
+        <ListView Margin="0,0,7,0" ItemsSource="{Binding}"
+                  IsSynchronizedWithCurrentItem="True"
+                  ItemContainerStyle="{StaticResource ItemContainerStyle}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name"
@@ -13,21 +22,28 @@
                     <GridViewColumn Header="Enabled" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox Content="{Binding IsEnabled}"
-                                          IsChecked="{Binding IsEnabled}" />
+                                <CheckBox IsChecked="{Binding IsEnabled}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <DockPanel DataContext="{Binding /}"
-                   LastChildFill="False">
-            <DockPanel DockPanel.Dock="Top">
-                <Label Content="Description:" />
-                <TextBlock Text="{Binding Description}"
-                           TextWrapping="Wrap" />
-            </DockPanel>
+        <DockPanel DataContext="{Binding /}">
+            <Label DockPanel.Dock="Top"
+                   Margin="0,0,0,5"
+                   Content="Options of Selected Plugin:" />
+            <ListView ItemsSource="{Binding Options}"
+                      ItemContainerStyle="{StaticResource ItemContainerStyle}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Name"
+                                        DisplayMemberBinding="{Binding Name}" />
+                        <GridViewColumn Header="Value"
+                                        DisplayMemberBinding="{Binding Value}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </DockPanel>
     </DockPanel>
 </Window>
