[Clear] 1. 将Save和Close两个Command通用化  2. 为插件实现语言切换的机制，并将语言切换功能通用化。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@175 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/PluginsDialog.xaml
+++ b/ClearMine.Dialogs/PluginsDialog.xaml
@@ -2,6 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterOwner"
+        ShowInTaskbar="False"
+        Background="{StaticResource DialogBackground}"
         Title="Plugins" Height="300" Width="350">
     <Window.Resources>
         <Style x:Key="ItemContainerStyle"
