--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -126,6 +126,14 @@
     <s:String x:Key="HistoryNotExistMessage">The game history folder doesn't exists.</s:String>
     <s:String x:Key="ShowAccurateTime">Show acc_urate gaming time</s:String>
     
+    <!-- Plugins Dialog -->
+    <s:String x:Key="PluginDialogTitle">Plugins</s:String>
+    <s:String x:Key="PluginNameColumnTitle">Name</s:String>
+    <s:String x:Key="PluginIsEnabledColumnTitle">Enabled</s:String>
+    <s:String x:Key="PluginPropertiesPanelLabel">Options of selected plugin:</s:String>
+    <s:String x:Key="PluginPropertyNameColumnTitle">Property Name</s:String>
+    <s:String x:Key="PluginPropertyValueColumnTitle">Property Value</s:String>
+    
     <!-- Exception Dialog -->
     <s:String x:Key="ExceptionBoxTitle">Clear Mine - Exception</s:String>
     <s:String x:Key="IgnoreExceptionButtonLabel">_Ignore it</s:String>
@@ -166,4 +174,5 @@
     <s:String x:Key="CompareSingleNumberFailed">Compare SingleNumber: {0} and {1} failed.</s:String>
     <s:String x:Key="AutoCheckIncompatibleMessage">AutoCheckMenuItemsBehavior may not be able to work with a checkable menu item correctly.</s:String>
     <s:String x:Key="AutoCheckCannotStoreSelection">AutoCheckMenuItemsBehavior cannot find a datacontext to store the current selection.</s:String>
+    <s:String x:Key="CannotFoundResourceKey">Cannot find resouce by key: {0}</s:String>
 </ResourceDictionary>
