[ClearMine] 将音乐文件转移到音乐插件中，并将Common中关于音乐的配置删除。音乐插件应当自治。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@179 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Plugin.AudioPlayer/Localization/zh-CN.xaml
+++ b/ClearMine.Plugin.AudioPlayer/Localization/zh-CN.xaml
@@ -11,4 +11,8 @@
     <s:String x:Key="AP_LostMusicDescription">游戏失手时播放的音乐</s:String>
     <s:String x:Key="AP_NewGameMusic">开场音乐</s:String>
     <s:String x:Key="AP_NewGameMusicDescription">游戏开始时播放的音乐</s:String>
+    <s:String x:Key="AP_ExpandMultipleMusic">多格展开音乐</s:String>
+    <s:String x:Key="AP_ExpandMultipleDescription">展开多个格时播放的音乐</s:String>
+    <s:String x:Key="AP_ExpandSingleMusic">单格展开音乐</s:String>
+    <s:String x:Key="AP_ExpandSingleDescription">展开一个格时播放的音乐</s:String>
 </ResourceDictionary>
