--- a/ClearMine.Dialogs/PluginsDialog.xaml
+++ b/ClearMine.Dialogs/PluginsDialog.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="ClearMine.UI.Dialogs.PluginsDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="CenterOwner"
         ShowInTaskbar="False"
+        WindowStartupLocation="CenterOwner"
+        TextOptions.TextFormattingMode="Display"
         Background="{DynamicResource DialogBackground}"
-        Title="{DynamicResource PluginDialogTitle}" Height="300" Width="400">
+        Title="{DynamicResource PluginDialogTitle}" Height="300" Width="500">
     <Window.Resources>
         <Style x:Key="ItemContainerStyle"
                TargetType="{x:Type ListViewItem}"
@@ -24,7 +25,8 @@
                     <GridViewColumn Header="{DynamicResource PluginIsEnabledColumnTitle}" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox IsChecked="{Binding IsEnabled}" />
+                                <CheckBox IsChecked="{Binding IsEnabled}"
+                                          HorizontalAlignment="Center" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
