--- a/ClearMine.Dialogs/PluginsDialog.xaml
+++ b/ClearMine.Dialogs/PluginsDialog.xaml
@@ -37,17 +37,31 @@
             <Label DockPanel.Dock="Top"
                    Margin="0,0,0,5"
                    Content="{DynamicResource PluginPropertiesPanelLabel}" />
-            <ListView ItemsSource="{Binding Options}"
-                      ItemContainerStyle="{StaticResource ItemContainerStyle}">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="{DynamicResource PluginPropertyNameColumnTitle}"
-                                        DisplayMemberBinding="{Binding Name}" />
-                        <GridViewColumn Header="{DynamicResource PluginPropertyValueColumnTitle}"
-                                        DisplayMemberBinding="{Binding Value}" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
+            <DataGrid ItemsSource="{Binding Options}"
+                      AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Name}" IsReadOnly="True"
+                                        Header="{DynamicResource PluginPropertyNameColumnTitle}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="{x:Type TextBlock}">
+                                <Setter Property="VerticalAlignment" Value="Center" />
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTemplateColumn Header="{DynamicResource PluginPropertyValueColumnTitle}">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Value}" Padding="3" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellEditingTemplate>
+                            <DataTemplate>
+                                <TextBox Text="{Binding Value, Mode=TwoWay}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellEditingTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </DockPanel>
     </DockPanel>
 </Window>
