[ClearMine] 用户选择的界面和语言可以被记住。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@182 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -176,4 +176,5 @@
     <s:String x:Key="AutoCheckCannotStoreSelection">AutoCheckMenuItemsBehavior cannot find a datacontext to store the current selection.</s:String>
     <s:String x:Key="CannotFoundResourceKey">Cannot find resouce by key: {0}</s:String>
     <s:String x:Key="CannotFoundProperty">Cannot find property {1} in class {0}</s:String>
+    <s:String x:Key="MediaFilePlayedInfo">Played media file: {0}</s:String>
 </ResourceDictionary>
